# aiida-vibroscopy

./: .clabot  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  TODO  codecov.yaml  environment.yml  pyproject.toml  setup.json  setup.py
.cla/version1/: signatures.json
.github/workflows/: cd.yml  ci.yml  cla.yml  publish-to-pypi.yml  update_changelog.py  validate_release_tag.py  weekly.yml
aiida_quantumespresso_finite_differences/calculations/: compute_long_range_constants.py  wrappers.py
aiida_quantumespresso_finite_differences/calculations/functions/: field_directions.py
aiida_quantumespresso_finite_differences/utils/: validation.py
aiida_quantumespresso_finite_differences/workflows/: finite_electric_fields.py  susceptibility_derivatives.py
aiida_quantumespresso_finite_differences/workflows/computations/: first_order_derivatives.py  second_order_derivatives_etot.py
aiida_quantumespresso_ir_raman/calculations/: wrappers.py
aiida_quantumespresso_ir_raman/workflows/: finite_electric_fields.py  susceptibility_derivatives.py
aiida_quantumespresso_vibroscopy/: __init__.py
aiida_quantumespresso_vibroscopy/calculations/: numerical_derivatives_utils.py  phonon_utils.py  spectra_utils.py  symmetry.py
aiida_quantumespresso_vibroscopy/calculations/numerical_derivatives/: wrappers.py
aiida_quantumespresso_vibroscopy/common/: __init__.py  constants.py
aiida_quantumespresso_vibroscopy/data/: __init__.py  vibro_fp.py  vibro_lr.py  vibro_mixin.py
aiida_quantumespresso_vibroscopy/utils/: elfield_cards_functions.py  elfield_cards_functions_new.py  validation.py
aiida_quantumespresso_vibroscopy/workflows/: base.py
aiida_quantumespresso_vibroscopy/workflows/dielectric/: base.py  finite_electric_fields.py  numerical_derivatives.py  second_order_derivatives.py  susceptibility_derivatives.py
aiida_quantumespresso_vibroscopy/workflows/phonons/: force_sets.py  grueneisen.py  harmonic.py  phonon.py  qha.py
aiida_quantumespresso_vibroscopy/workflows/spectra/: intensities_average.py  iraman.py
docs/: Makefile
docs/source/: 1_phonon.ipynb  2_dielectric.ipynb  3_iraman.ipynb  4_polar.ipynb  5_iraman_functionals.ipynb  6_pockels.ipynb  citeus.md  commands.md  conf.py  index.md  index.rst
docs/source/devel_guide/: index.rst  workchains.rst
docs/source/howto/: index.md  overrides.md  postprocess.md  understand.md
docs/source/howto/include/: run_hp_basic.py
docs/source/howto/workflows/: index.md
docs/source/howto/workflows/dielectric/: base.md  (+1 more)
docs/source/installation/: index.md
docs/source/local_module/: __init__.py  temp_profile.py
docs/source/local_module/sssp_pseudos/: SSSP-1.2-PBEsol-efficiency.json  SSSP-1.3-PBEsol-efficiency.json
docs/source/module_guide/: calculations.rst  data.rst  index.rst  workflows.rst
docs/source/reference/: index.md
docs/source/reference/api/: index.md
docs/source/topics/: conventions.md  formulation.md  index.md  overrides.md
docs/source/topics/workflows/: index.md
docs/source/tutorials/: index.md
docs/source/user_guide/: index.rst
docs/source/user_guide/get_started/: index.rst
docs/source/user_guide/workflows_plugins/: index.rst
examples/: README.md
examples/commands/: README.md  overrides.yaml
examples/scripts/workflows/spectra/: overrides.yaml  submit_default.py  submit_default_custom_kpoints.py  submit_default_custom_pseudos.py  submit_with_overrides.py
examples/workflows/spectra/: submit_default_custom_kpoints.py
src/aiida_vibroscopy/: __init__.py
src/aiida_vibroscopy/calculations/: create_directional_kpoints.py  elph.py  numerical_derivatives_utils.py  phonon_utils.py  spectra_utils.py  symmetry.py
src/aiida_vibroscopy/cli/: __init__.py
src/aiida_vibroscopy/cli/utils/: __init__.py  launch.py  options.py  validate.py
src/aiida_vibroscopy/cli/workflows/: __init__.py
src/aiida_vibroscopy/common/: __init__.py  constants.py  properties.py
src/aiida_vibroscopy/data/: __init__.py  vibro_fp.py  vibro_lr.py  vibro_mixin.py
src/aiida_vibroscopy/parsers/: base.py  elph.py
src/aiida_vibroscopy/utils/: broadenings.py  elfield_cards_functions.py  plotting.py  spectra.py  validation.py
src/aiida_vibroscopy/utils/integration/: __init__.py  lebedev.py
src/aiida_vibroscopy/workflows/: base.py
src/aiida_vibroscopy/workflows/dielectric/: base.py  numerical_derivatives.py
src/aiida_vibroscopy/workflows/phonons/: base.py  harmonic.py
src/aiida_vibroscopy/workflows/protocols/: base.yaml
src/aiida_vibroscopy/workflows/spectra/: __init__.py  intensities_average.py  iraman.py
tests/: conftest.py
tests/calculations/: chi2_BTO.npy  phonopy_AlAs.yaml  phonopy_BTO.yaml  raman_BTO.npy  test_elph.py  test_numerical_derivatives.py  test_spectra.py  test_symmetry.py
tests/calculations/test_spectra/: test_compute_clamped_pockels_tensor.npz  test_compute_methods.npz  test_generate_vibrational_data_from_forces.npz
tests/cli/: __init__.py  conftest.py
tests/cli/fixtures/overrides/: dielectric.yaml  iraman-spectra.yaml  phonon.yaml
tests/cli/workflows/: __init__.py
tests/cli/workflows/dielectric/: __init__.py  test_base.py
tests/cli/workflows/phonons/: __init__.py  test_base.py  test_harmonic.py
tests/cli/workflows/spectra/: __init__.py  test_iraman_spectra.py
tests/data/: test_vibro.py
tests/data/test_vibro/: test_methods.npz
tests/utils/: test_broadening.py  test_integration.py  test_plotting.py  test_validation.py
tests/workflows/dielectric/: test_base.py  test_finite_electric_fields.py  test_second_order_derivatives.py
tests/workflows/phonons/: test_force_sets.py  test_harmonic.py  test_phonon.py
tests/workflows/protocols/: test_dielectric.py  test_harmonic.py  test_iraman.py  test_phonon.py
tests/workflows/protocols/test_dielectric/: test_default.yml
tests/workflows/protocols/test_harmonic/: test_default.yml
tests/workflows/protocols/test_iraman/: test_default.yml
tests/workflows/spectra/: test_intensities_average.py  test_iraman.py  test_spectra.py
utils/: __init__.py  validate_version_number.py
(+61 files in other folders)
